It's not worth installing Haskell just to convert README.md to README.rst. Hardlinking instead

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,4 @@
-include README.md
-include CHANGES.txt
-include LICENSE.txt
-recursive-include *.txt *.py *.md
+include *.txt
+include *.md
+graft docs
+graft samples
