--- a/autodocs/Makefile
+++ b/autodocs/Makefile
@@ -3,7 +3,7 @@
 
 # You can set these variables from the command line.
 SPHINXOPTS    =
-SPHINXBUILD   = sphinx-build
+SPHINXBUILD   = ~/venvs/py279/bin/sphinx-build
 PAPER         =
 BUILDDIR      = _build
 
